[tool.poetry]
name = "tool_lib_testing"
version = "0.1.0"
description = ""
authors = ["Bohdan Branytskyi <bohdan.branytskyi@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.28.1"
black = "^22.10.0"
flake8 = "^5.0.4"
selenium = "^4.5.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
