[tool.poetry]
name = "toolscuscus"
version = "1.0.0"
description = ""
authors = ["Bohdan Branytskyi <bohdan.branytskyi@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
black = "^22.10.0"
requests = "^2.28.1"
pytest = "^7.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
